# lambdaspeed

./: .clang-format  README.md  lambdaspeed.c  lambdaspeed.h  optiscope.c  optiscope.h  tests.c
.github/workflows/: c-cpp.yml
benchmarks/: 2-power-1000.c  ackermann-of-3-3.c  factorial-of-20.c  fibonacci-of-15.c  fibonacci-of-18.c  owl-explosion.c  scott-insertion-sort.c  scott-tree-map-and-sum.c
benchmarks-haskell/: ackermann-of-3-3.hs  church-list-reverse-and-sum.hs  scott-insertion-sort.hs  scott-tree-map-and-sum.hs
benchmarks-ocaml/: ackermann_of_3_3.ml  church_list_reverse_and_sum.ml  scott_insertion_sort.ml  scott_tree_map_and_sum.ml
command/: bench.sh  test.sh
nbe/: dune-project  nbe.opam
nbe2/: dune-project  nbe2.opam
