(lang dune 3.18)

(name nbe)

(generate_opam_files true)

(source
 (github etiams/optiscope))

(authors "Louis F. Ashfield <louis.ashfield@proton.me>")

(maintainers "Louis F. Ashfield <louis.ashfield@proton.me>")

(license BSD-3-Clause)

(documentation https://github.com/etiams/optiscope)

(package
 (name nbe)
 (synopsis "An OCaml NbE implementation of the pure lambda calculus")
 (depends ocaml))
